# tw-futopt-daily

./: .gitignore  README.md  pyproject.toml
backfill_configs/: futures.json
tests/: test_backfill.py  test_cli.py  test_integration.py
tw_futopt/: __init__.py  backfill.py  cli.py
tw_futopt/backfill_configs/: user_tick.json
